--- a/faq/getting-started-faq/installation-compatibility.mdx
+++ b/faq/getting-started-faq/installation-compatibility.mdx
@@ -1,220 +1,133 @@
 ---
-title: "Installation and Compatibility"
-description: "Answers to common questions about installing GoogleTest and GoogleMock, required prerequisites, supported platforms, and C++ version compatibility. Perfect for users starting out or upgrading."
+title: "Installation, Requirements & Compatibility"
+description: "Get quick answers about supported platforms, compiler requirements (including C++17 standard), and platform-specific integration tips, ensuring your development environment is ready for GoogleTest."
 ---
 
-# Installation and Compatibility FAQ
+# Installation, Requirements & Compatibility FAQ
 
-This FAQ page addresses the most common questions related to installing **GoogleTest** and **GoogleMock**, clarifying required prerequisites, supported platforms, and C++ compatibility. Whether you're getting started or upgrading your test environment, this guide will help you smoothly set up and verify your installation.
+This FAQ provides clear, practical answers to common questions about platform support, compiler needs, and ensuring compatibility for building and using GoogleTest and GoogleMock. It helps you confirm your development environment is properly prepared and highlights tips to avoid common pitfalls during setup.
 
 ---
 
-## 1. What are the prerequisites for installing GoogleTest and GoogleMock?
+## 1. Supported Platforms and Operating Systems
 
-Before installing GoogleTest and GoogleMock, ensure the following prerequisites are met:
+**Q: On which operating systems can I build and run GoogleTest and GoogleMock?**  
+A: GoogleTest supports a wide range of platforms including Linux, Windows (Desktop, MinGW, Mobile variants), macOS, Android, and several Unix-like systems such as FreeBSD, Solaris, and AIX. The support follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support), ensuring portability and consistency across these environments.
 
-- **Supported C++ Compiler:** Your compiler must support the C++17 standard or later. Examples include GCC 7+, Clang 5+, MSVC 2017 Update 3+, and others.
-- **Operating System:** Supported platforms include popular OSes such as Linux, Windows (including MinGW and Visual Studio environments), and macOS.
-- **Threading Support:** GoogleTest supports multi-threading using pthreads on supported platforms. Ensure pthread library is available or configure accordingly.
-- **Build Tools:** CMake 3.14 or later is recommended to configure and build GoogleTest (which includes GoogleMock).
+**Q: Are there embedded or special platform limitations?**  
+A: Some embedded or specialized platforms like ESP8266, ESP32, and QuRT have limited support, particularly for features like file system access or threading. Check the support matrix linked below for detailed coverage.
+
+**Q: Where can I find a complete list of supported platforms and compilers?**  
+A: Refer to the detailed platform and compiler matrix on GitHub [here](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
+
+---
+
+## 2. Compiler Requirements and C++ Standard
+
+**Q: What are the minimum C++ standard and compiler versions required?**  
+A: GoogleTest requires the C++17 standard for building. Supported compilers include GCC (7.0+ recommended), Clang, Intel LLVM, and MSVC (Visual Studio 2015 or later). Your compiler must have full C++17 feature compliance.
+
+**Q: How do I ensure C++17 is enforced in my build system?**  
+A: For CMake projects, set the following in your top-level `CMakeLists.txt`:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+Alternatively, add appropriate compiler flags such as `-std=c++17` for GCC and Clang manually.
+
+**Q: Are there any special compiler flags recommended for building GoogleTest?**  
+A: Yes, GoogleTest's CMake build script adjusts compiler settings for common compilers, enhancing warnings and compatibility. For example, MSVC projects override default flags to use more strict warning levels and static runtimes unless configured otherwise. You can use the `gtest_force_shared_crt` option to match your project's runtime library linkage.
+
+---
+
+## 3. Threading and Runtime Dependencies
+
+**Q: Does GoogleTest require threading support?**  
+A: GoogleTest is thread-safe when built with pthread support on platforms where it is available. It requires threading features for advanced testing patterns and parallel test execution.
+
+**Q: How do I enable or disable pthread support?**  
+A: The CMake build attempts to detect pthread availability automatically, but you can enforce it by defining `-DGTEST_HAS_PTHREAD=1` or `0`. Note that pthread is generally unavailable or unsupported on some platforms such as MinGW.
+
+**Q: Are there any known issues related to threading on Windows?**  
+A: On Windows, GoogleTest uses native Windows threading primitives. When using MinGW, pthreads are not supported by GoogleTest and Windows threading primitives are used instead.
+
+---
+
+## 4. Using GoogleTest as Shared or Static Libraries
+
+**Q: Can I build GoogleTest and GoogleMock as shared libraries (DLLs)?**  
+A: Yes, both GoogleTest and GoogleMock can be built as static or shared libraries. Use `-DGTEST_CREATE_SHARED_LIBRARY=1` when building the libraries.
+
+**Q: What compiler flags do I need to link against shared GoogleTest libraries?**  
+A: When linked as shared libraries, add the flag `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` when compiling your test code to ensure proper API decorations and linkage.
+
+**Q: How do I avoid runtime library mismatches in Visual Studio?**  
+A: By default, Visual Studio uses dynamic CRT linkage, while GoogleTest defaults to static. Enable the CMake option `gtest_force_shared_crt` to align GoogleTest with your project settings and prevent linker errors.
+
+---
+
+## 5. Common Integration Tips and Pitfalls
+
+**Q: How do I integrate GoogleTest in my existing CMake project?**  
+A: The recommended way is to use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed. Alternatively, include GoogleTest source as a subdirectory using `add_subdirectory()` for consistent compiler settings.
+
+**Q: What should I do if I encounter macro name conflicts with GoogleTest?**  
+A: Use compiler flags like `-DGTEST_DONT_DEFINE_TEST=1` to prefix macros with `GTEST_` and avoid collisions with other libraries.
+
+**Q: How can I verify that my compiler supports the required C++17 features?**  
+A: Attempt to build a minimal test program with C++17 enabled. Alternatively, rely on GoogleTest's CMake build which enforces `cxx_std_17` feature.
+
+**Q: Are exceptions, RTTI, and wide strings supported and required?**  
+A: GoogleTest requires exceptions and RTTI enabled by default. Most mainstream compilers support these. Wide string support depends on the platform but is generally available on major OSes.
+
+---
+
+## 6. Troubleshooting Environment and Compatibility Issues
+
+**Q: What should I do if my build fails due to compiler version or standard library issues?**  
+A: Ensure your compiler version is recent enough. For example, MSVC must be 2015 or later. If your environment does not fully support C++17, upgrade your toolchain or adjust compiler flags accordingly.
+
+**Q: How to fix linker errors related to pthread or missing threading symbols?**  
+A: Link with pthread explicitly if your build system does not do so automatically. In CMake, this is handled when `Threads` package is found and linked.
+
+**Q: What if I encounter errors related to macro redefinitions?**  
+A: Use the `GTEST_DONT_DEFINE_*` flags to rename conflicting macros.
+
+**Q: How can I get diagnostic information about platform detection and build settings?**  
+A: Enable verbose output of your build system. GoogleTest's CMake scripts print messages about pthread detection and compiler flags.
+
+---
+
+## Useful Links
+
+- [GoogleTest Official GitHub Repository](https://github.com/google/googletest)  
+- [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)  
+- [Supported Platforms & Compilers Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)  
+- [GoogleTest CMake Installation Instructions](/getting-started/set-up-prerequisites-installation/installation-cmake)  
+- [Known Setup Issues & Troubleshooting](/getting-started/troubleshooting-common-issues/troubleshooting-setup-errors)
+
+---
+
+## Summary
+
+This FAQ guides you through validating and preparing your development setup for GoogleTest and GoogleMock, covering supported operating systems, compiler requirements with C++17 compliance, threading support, and practical tips for integrating the testing framework.
+
+By confirming your environment against these requirements and using the provided best practices, you ensure a smooth build and reliable test execution experience.
+
+For detailed integration workflows, refer to the [Build System Integration](https://github.com/google/googletest/tree/main/overview/workflow-integration/integration-build-systems) and [Supported Platforms](https://github.com/google/googletest/tree/main/overview/workflow-integration/supported-platforms) documentation to match your use case perfectly.
+
+---
 
 <Tip>
-Setting the C++ standard explicitly in your build system with `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)` ensures proper compiler behavior.
+Always verify your compiler and build settings explicitly support C++17, exceptions, and RTTI to avoid subtle build failures.
 </Tip>
-
-## 2. Which platforms and compilers does GoogleTest officially support?
-
-GoogleTest supports a broad range of platforms and compilers in accordance with Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) and detailed in the corresponding matrix at:
-
-[Foundational C++ Support Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-
-Key supported platforms:
-
-- **Linux:** Various distributions with GCC or Clang
-- **Windows:** Desktop with Visual Studio, MinGW
-- **macOS:** With Xcode or Clang
-
-Minimum compiler requirements include robust C++17 support. Certain embedded or mobile platforms have limited or no support.
-
 <Note>
-For detailed platform-specific notes, including multi-threading and build system integration, refer to the _Supported Platforms & Dependencies_ guide.
+Using GoogleTest as a git submodule or FetchContent in CMake helps keep your test dependencies up to date and consistent.
 </Note>
-
-## 3. How do I perform a typical installation of GoogleTest and GoogleMock using CMake?
-
-The recommended installation steps are:
-
-1. **Clone the repository**, optionally specifying the desired release version:
-   ```bash
-   git clone https://github.com/google/googletest.git -b v1.17.0
-   cd googletest
-   ```
-
-2. **Create and enter a build directory:**
-   ```bash
-   mkdir build && cd build
-   ```
-
-3. **Run CMake to configure the build:**
-   - To build GoogleTest with GoogleMock included (default):
-     ```bash
-     cmake ..
-     ```
-   - To build GoogleTest only (without GoogleMock):
-     ```bash
-     cmake .. -DBUILD_GMOCK=OFF
-     ```
-
-4. **Build the libraries:**
-   - On Unix-like systems:
-     ```bash
-     make
-     sudo make install  # Optional, for system-wide installation
-     ```
-   - On Windows, open the generated `.sln` file with Visual Studio and build.
-
-5. **Link your projects** against the installed or built libraries accordingly.
-
-<Tip>
-Using GoogleTest as part of your existing CMake project via `add_subdirectory` is recommended to ensure consistent compiler and linker flags.
-</Tip>
-
-## 4. What about the main function for tests? Can I use GoogleMock with or without it?
-
-GoogleMock provides two primary library options for linking:
-
-- **`gmock_main`:** This library includes a `main()` function that initializes GoogleMock and runs all tests. Useful if you want a ready-to-use test binary without writing your own main.
-- **`gmock`:** This library excludes the main function, so you will provide your own `main()` function that calls `testing::InitGoogleMock()` and triggers test execution.
-
-By linking to `gmock_main`, you simplify test setup, but if you need customized initialization or integration, link against `gmock` and define your own main function.
-
-Example custom main snippet:
-```cpp
-#include "gmock/gmock.h"
-
-int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-## 5. What are the common compiler flags or macros required during build?
-
-- `-DGTEST_HAS_PTHREAD=1` or `0`: Controls pthread usage if automatic detection fails.
-- `-DGTEST_CREATE_SHARED_LIBRARY=1`: For building GoogleTest as shared libraries.
-- `-DGTEST_LINKED_AS_SHARED_LIBRARY=1`: To compile test code linking GoogleTest shared library.
-- `-DGTEST_DONT_DEFINE_XXX=1`: Prevents GoogleTest from defining certain macros to avoid clashes.
-
-Your build system will often set these flags automatically when using the official CMake scripts.
-
-## 6. How to handle multi-threading and pthread support?
-
-GoogleTest is thread-safe when pthread support is enabled (on Linux, macOS, and other POSIX platforms). If your environment does not correctly detect pthread availability, you can explicitly define:
-
-```bash
--DGTEST_HAS_PTHREAD=1  # Or 0 to disable
-```
-
-When enabling pthreads, ensure your linker includes the pthread library (e.g., `-lpthread`).
-
-## 7. Are there any common installation pitfalls?
-
-- **Runtime Library Mismatches (Windows Visual Studio):** Linking GoogleTest static libraries built with static runtime against projects using dynamic runtime causes linker errors (e.g., LNK2038). Use the CMake variable `gtest_force_shared_crt` set to `ON` to build GoogleTest with dynamic runtime libraries to match your project.
-- **Compiler Compatibility:** Ensure your compiler version fully supports C++17; older versions will fail to compile.
-- **Outdated CMake:** CMake versions older than 3.14 may not support required commands like `FetchContent`
-
 <Warning>
-Failure to match runtime libraries on Windows is the most frequent cause of build failures.
+Static vs dynamic runtime mismatches on Windows are a common cause for linker errors; use the `gtest_force_shared_crt` option if needed.
 </Warning>
 
-## 8. Does GoogleTest support building as shared libraries (DLLs)?
-
-Yes, it does. To build GoogleTest as a shared library:
-
-- Add `-DGTEST_CREATE_SHARED_LIBRARY=1` to compiler options.
-- When compiling your tests against the shared library, also add `-DGTEST_LINKED_AS_SHARED_LIBRARY=1`.
-
-This setup requires proper linker flags for creating shared libraries on your platform.
-
-## 9. How to link GoogleMock with GoogleTest?
-
-GoogleMock depends on GoogleTest. Typically, linking involves:
-
-```bash
--lgmock_main  # Includes gmock, gtest, and main()
-# OR
--lgmock -lgtest  # If providing your own main()
-```
-
-Using package management tools or CMake `find_package(GTest REQUIRED)` allows linking through targets like `GTest::gmock_main`.
-
-## 10. Where can I find the installation libraries and header include paths after install?
-
-- **Typical system install locations:**
-  - Headers under `/usr/local/include` or chosen prefix include directory.
-  - Libraries under `/usr/local/lib` or chosen prefix lib directory.
-
-- **Pkg-config files:** After installation, `.pc` files named `gmock.pc` and `gmock_main.pc` are placed under `lib/pkgconfig`.
-- These files specify `libdir` and `includedir`, simplifying integration with build systems that use pkg-config.
-
-## 11. How to verify that installation and build succeeded?
-
-1. Build and install GoogleTest/GoogleMock as per instructions.
-2. Create a minimal test source file using the `TEST` macro.
-3. Compile and link your test using GoogleTest libraries.
-4. Run the test executable:
-   - It should output test results.
-   - Exit code zero indicates success.
-
-If tests fail to build or run, check for:
-- Missing include paths or library links.
-- C++17 compatibility.
-- Runtime mismatches on Windows.
-
-## 12. Where can I find further help and expanded documentation?
-
-- [Installation Guide](https://github.com/google/googletest/blob/main/docs/INSTALL.md) in the official repo.
-- [Supported Platforms & Dependencies](../../overview/integration-and-ecosystem/platforms-dependencies.mdx).
-- [Prerequisites & Supported Platforms](../../getting-started/setup-requirements-installation/prerequisites-supported-platforms.mdx).
-- [Troubleshooting Installation Issues](../../getting-started/first-run-validation/installation-troubleshooting.mdx).
-
 ---
-
-### Related Documentation Links
-
-- [Writing Your First Test](../../getting-started/first-run-validation/writing-first-test.mdx)
-- [Setting Up and Integrating GoogleTest](../../guides/getting-started/setup-integration.mdx)
-- [CI/CD Integration](../../guides/integration-and-realworld/ci-cd-integration.mdx)
-
----
-
-### Summary Diagram: Installation Workflow
-
-```mermaid
-flowchart TD
-  A[Start Installation] --> B[Clone GoogleTest Repository]
-  B --> C[Create Build Directory]
-  C --> D{Build GoogleTest with or without GoogleMock?}
-  D -->|With GoogleMock| E[Run cmake ..]
-  D -->|Without GoogleMock| F[Run cmake .. -DBUILD_GMOCK=OFF]
-  E --> G[Build Using make or IDE]
-  F --> G
-  G --> H{Install Libraries?}
-  H -->|Yes| I[Run sudo make install]
-  H -->|No| J[Use Local Build]
-  I --> K[Link Test Projects to Installed Libraries]
-  J --> K
-  K --> L[Write Sample Test]
-  L --> M[Compile & Link with Proper Flags]
-  M --> N[Run Test Executable]
-  N --> O{Tests Pass?}
-  O -->|Yes| P[Installation Successful]
-  O -->|No| Q[Troubleshoot]
-
-  classDef decision fill:#f9f,stroke:#333,stroke-width:2px;
-  class D,H,O decision;
-```
-
----
-
-For comprehensive coverage and stepwise advancement, consult the detailed guides and installation troubleshooting documents linked here.
